--- a/project/FE/src/app/test/test-list/test-list.component.html
+++ b/project/FE/src/app/test/test-list/test-list.component.html
@@ -69,7 +69,7 @@
       <div class="row">
         <div class="col-md-3 col-sm-6">
           <button id="import" class="btn import" style="width: 140px; height: 40px">
-            <input type="file" (change)="selectFile($event)" class="custom-file-input" for="import">
+            <input type="file" accept=".txt"  (change)="selectFile($event)" class="custom-file-input" for="import">
           </button>
         </div>
         <div class="col-md-3 col-sm-6">
