--- a/project/FE/src/app/question/update-question/update-question.component.html
+++ b/project/FE/src/app/question/update-question/update-question.component.html
@@ -1,3 +1,7 @@
+<div class="border">
+  <nav class="navbar bg-title-list-quiz ">
+    <p class="m-auto heard">Update Question</p>
+  </nav>
 <form  [formGroup]="formQuestion">
   <div class="d-flex justify-content-center align-items-center flex-column update">
     <div class="card-body body-background top-ranking">
@@ -10,8 +14,9 @@
         <li class="list-inline mt-2">
           Question
           <i class="pr-5" aria-hidden="true"></i>
-          <span class="float-right "><input class="form-control" style="width: 300px"formControlName="question" type="text"></span>
+          <span class="float-right "><input class="form-control" style="width: 300px" formControlName="question" type="text"></span>
         </li>
+        <li class="list-inline mt-2 ml-5 text-danger" *ngIf="formQuestion.get('question').hasError('required') && formQuestion.get('question').touched">* Enter Question please</li>
         <fieldset  formGroupName="answerAndRight">
           <ul class="list-group">
             <li class="list-inline mt-2">
@@ -32,28 +37,28 @@
           Subject
           <i class="pr-5" aria-hidden="true"></i>
           <span class="float-right">
-<!--            <input class="form-control" style="width: 300px" formControlName="subjectId" type="number">-->
             <select class="form-control" style="width: 300px" formControlName="subjectId">
               <option class="form-control" *ngFor="let subject of listSubject" value="{{subject.subjectId}}">{{subject.subjectName}}</option>
             </select>
           </span>
         </li>
+        <li class="list-inline mt-2 ml-5 text-danger" *ngIf="formQuestion.get('subjectId').hasError('required') && formQuestion.get('subjectId').touched">* Enter subject please</li>
 
         <li class="list-inline mt-2">
           Test
           <i class="pr-5" aria-hidden="true"></i>
           <div class="input-group mb-3  float-right" style="width: 300px">
-            <input formControlName="testCodeList" readonly class=" form-control" type="text"  [(ngModel)]="listTestCode" [value]="listTestCode" aria-label="Recipient's username" aria-describedby="button-addon2">
+            <input formControlName="testCodeList" readonly class=" form-control" type="text"  [(ngModel)]="listTestCode" aria-label="Recipient's username" aria-describedby="button-addon2">
             <div class="input-group-append">
               <button class="btn btn-outline-secondary" (click)="reset()" type="button" id="button-addon2">Retype</button>
             </div>
           </div>
 
         </li>
-        <li  class="list-inline mt-2">
+        <li  class="list-inline">
           <div class="container row">
             <div class="col-4"></div>
-            <div class="col-5 " >
+            <div class="col-7 " >
 
               <ng-autocomplete  formControlName="testCode"
                                 [data]="data$ | async"
@@ -70,8 +75,8 @@
                 <div [innerHTML]="listTestCode"></div>
               </ng-template>
             </div>
-            <div class="col-3">
-              <input class="float-right btn btn-light bg-transparent button-update" value="add test"  type="submit" (click)="inputTesst()">
+            <div class="col-1 ">
+              <input class="float-left btn btn-light bg-transparent button-update" value="add test"  type="submit" (click)="inputTesst()">
             </div>
           </div>
         </li>
@@ -84,6 +89,6 @@
   </div>
 
 </form>
-
+</div>
 
 
