--- a/project/FE/src/app/app.component.html
+++ b/project/FE/src/app/app.component.html
@@ -60,6 +60,29 @@
         </div>
       </div>
     </div>
+    <!-- Thiện update lần 2 - CẤM XOÁ ! -->
+    <div>
+      <h1>Sau khi đăng nhập ở đây sẽ có link để truy cập vào các chức năng tuỳ theo role </h1>
+      <ul class="nav navbar-nav" routerLinkActive="active">
+        <li *ngIf="authority === 'admin'" class="nav-item">
+          <a class="nav-link" routerLink="admin">
+            Access Admin Page
+          </a>
+          <pre>List admin feature</pre>
+        </li>
+        <li *ngIf="authority === 'member'" class="nav-item">
+          <a class="nav-link" routerLink="member">
+            Access Member Page
+          </a>
+        </li>
+        <li *ngIf="authority === 'unauthorized'" class="nav-item">
+          <p>Login please!</p>
+        </li>
+      </ul>
+      <h1>Danh sách chức năng</h1>
+      <router-outlet></router-outlet>
+    </div>
+    <!-- // -->
 
     <!-- CENTER COLLUMN -->
 
@@ -123,7 +146,8 @@
           <div class="card-header p-2">Customers</div>
           <app-auth-login></app-auth-login>
           <div class="card-body members yellow">
-            <form action="#">
+            <!-- Thiện: Chỗ này sau khi import reactive form sẽ lỗi, nên sửa -->
+            <form formGroup="">
               <div class="form-group row">
                 <i class="fa fa-user" aria-hidden="true"> MEMBERS</i>
               </div>
@@ -131,7 +155,8 @@
             </form>
           </div>
           <div class="card-body blue search-box">
-            <form action="#">
+            <!-- Thiện: Chỗ này sau khi import reactive form sẽ lỗi, nên sửa -->
+            <form formGroup="">
               <div class="form-group row">
                 <i class="fa fa-search" aria-hidden="true"> SEARCH</i>
               </div>
