phuong - fix logic check icon

--- a/project/FE/src/app/exam/get-exam/get-exam.component.css
+++ b/project/FE/src/app/exam/get-exam/get-exam.component.css
@@ -62,18 +62,19 @@ ul {
   clear:left;
 }
 
-.allCheckQ{
+
+.fa-times{
   visibility: hidden;
 }
 
-.fa-times{
-  visibility: visible;
-}
-
 .fa-check{
-  visibility: visible;
+  visibility: hidden;
 }
 
 .rightAnswer{
   visibility: hidden;
+}
+
+.allCheckQ{
+  visibility:visible ;
 }
