phuong- fix style inline

--- a/project/FE/src/app/exam/get-exam/get-exam.component.html
+++ b/project/FE/src/app/exam/get-exam/get-exam.component.html
@@ -4,7 +4,7 @@
       <p>Exam number {{exam.examId}}</p>
     </div>
     <div>
-      <label id="result">Your score is <b [style.color]="'blue'"> {{exam.mark}}/10 </b> question."
+      <label id="result">Your score is <b id="score"> {{exam.mark}}/10 </b> question."
       </label><br/>
     </div>
   </div>
