--- a/project/FE/src/app/test/get-test/get-test.component.css
+++ b/project/FE/src/app/test/get-test/get-test.component.css
@@ -15,7 +15,9 @@ ul {
   margin: 0px;
   padding: 0px;
 }
-
+.rightAnswer{
+  visibility: hidden;
+}
 .question input[type="radio"] {
   display: none;
 }
@@ -67,4 +69,8 @@ ul {
 
 .question{
   clear:left;
+}
+
+#time{
+  color: red;
 }
