--- a/project/FE/src/app/test/get-test/get-test.component.html
+++ b/project/FE/src/app/test/get-test/get-test.component.html
@@ -1,6 +1,6 @@
 <div>
   <div>
-    <label>Remaining time <span [style.color]="'red'"><b>{{display}}</b></span></label>
+    <label>Remaining time <span id="time" ><b>{{display}}</b></span></label>
   </div>
   <form name="myform">
     <table>
@@ -12,7 +12,7 @@
               <!--question-->
               <b><span>Q {{i + 1}}: </span></b><b><span>{{question.question}}</span></b>
               <!--correct answer-->
-              <input id="text{{i+1}}" style="visibility: hidden;" value="{{question.rightAnswer}}"/><br/>
+              <input class="rightAnswer" id="text{{i+1}}"  value="{{question.rightAnswer}}"/><br/>
               <!--answer-->
               <input id="Cau{{question.questionId}}A" [name]="question.questionId" type="radio"
                      value="{{question.answerA}}"
