--- a/project/FE/src/app/user/detail-user/detail-user.component.html
+++ b/project/FE/src/app/user/detail-user/detail-user.component.html
@@ -1,18 +1,22 @@
 <div class="container w-75 mt-5">
-<!--  <form class="card info-form">-->
     <div class="title card-header">
       <span>Personal Information</span>
     </div>
     <div class="form-row pr-5 pt-5">
       <div class="col-md-4 form-group text-center pl-4">
         <p>Avatar</p>
-        <a class='btn btn-upload' href='javascript:;'>
-          <input type="file" multiple id="uploadFile" name="file_source"
-                 onchange='$("#upload-file-info").html($(this).val());'
-                 style="width: 190px; height: 200px; margin-left: 115px">
-          <img *ngIf="user" [src]="user.avatar" alt="avatar" style="width: 200px; height: 230px">
-        </a>
+          <div class="col-lg-2 col-6" *ngFor="let ava of avatar | async">
+            <a class='btn btn-upload' [href]="downloadURL">
+              {{ downloadURL }}
+              <img src="{{ava.imagenes}}" alt="avatar" style="width: 200px; height: 230px">
+            </a>
+            <input type="file" multiple (change)="detectFiles($event)">
+            <button (click)="uploadFile()" class="btn btn-primary">Update</button>
+            <div>{{ uploadPercent | async }}</div>
+            <a [href]="downloadURL">{{ downloadURL }}</a>
+          </div>
       </div>
+    </div>
       <div class="col-md-8 pl-0 ml-0">
         <table class="w-100 h-100">
           <tr style="background-color: #f5f5f5">
@@ -37,7 +41,6 @@
           </tr>
         </table>
       </div>
-    </div>
     <div class="form-row ml-5 pl-4">
       <div class="col-md-1 form-group pl-5 ml-3">
         <button type="button" class="btn btn-outline-secondary">Update</button>
@@ -48,9 +51,8 @@
     </div>
     <div class="form-row">
       <div class="col-md-12 form-group text-center">
-<!--        <a routerLink="" class="btn btn-info">Edit</a>-->
-<!--        <a routerLink="" class="btn btn-info">History</a>-->
+        <a [routerLink]="['update-user/:id']" class="btn btn-info">Edit</a>
+        <a [routerLink]="['update-user/:id']" class="btn btn-info">History</a>
       </div>
     </div>
-<!--  </form>-->
 </div>
