khanh fix bug message cannot receive from backend

--- a/project/FE/src/app/test/test-list/test-list.component.html
+++ b/project/FE/src/app/test/test-list/test-list.component.html
@@ -80,7 +80,7 @@
           </button>
         </div>
         <div class="col-md-3 col-sm-6">
-          <a href="http://localhost:63342/prototype_c02h1_doquockhanh/add-exam.html?_ijt=2h6f7k9fqq193mh2rtto7usv59"
+          <a [routerLink]="['addTest']"
              class="btn btn-outline-info">
             <i class="fa fa-puzzle-piece" aria-hidden="true"></i>
             Add new
