khanh update show message, update message

--- a/project/FE/src/app/test/add-test/add-test.component.html
+++ b/project/FE/src/app/test/add-test/add-test.component.html
@@ -78,7 +78,7 @@
               *test code not empty
             </div>
             <div class="text-danger" *ngIf="formAddTest.get('testCode').hasError('pattern') && formAddTest.get('testCode').touched">
-              *grade not allowed special character, and less than 4 character
+              *test code not allowed special character, and less than 4 character
             </div>
           </div>
         </div>
